Structure course for Control flow

--- a/foundations_of_js/BJSP/1.intro_to_js_variables_and_operators.md
+++ b/foundations_of_js/BJSP/1.intro_to_js_variables_and_operators.md
@@ -46,7 +46,7 @@ This section contains some additional helpful links.
 - Dive deeper into the [JS Grammar](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Grammar_and_Types)
 
 
-### BJSP Assessment Quiz
+### Assessment Quiz
 
 1. Which of the following is an incorrect way to name a variable in JS?
 
@@ -60,7 +60,7 @@ This section contains some additional helpful links.
 
 - `1`
 - `0`
-- `true`
+- `true` [Correct Answer]
 - `false`
 
 3. If we declare a variable, `const test = 0`, then later, reassign, `test = 2`, what will happen?
@@ -84,27 +84,19 @@ This section contains some additional helpful links.
    - 6
 
 5.  Consider the following code:
-    ```js
-    let x = 99;
-    console.log(++x);
-    console.log(x--);
-    ```
+   ```js
+   let x = 99;
+   console.log(++x, x--);
+   ```
 
-    What will be the output of the code?
-- 100
-  100    [Correct Answer]
-
-- 100
-   99
-
-- 99
-  99
-
--  99
-  100
+   What will be the output of the code?
+- 100, 100 [Correct Answer]
+- 100, 99
+- 99, 99
+- 99, 100
 
 
-### BJSP Assignment: Remove Duplicates
+### Assignment: Remove Duplicates
 #### Problem Statement
 Given an array of numbers with duplicate values, write a function to return an array of approximately equally divided sorted array of unique numbers. For example, if the user provides an array of numbers say
 > [1, 10, 20, 2, 5, 2, 2, 2, 5, 3, 4, 8]
