Course outline for Form Validation

--- a/foundations_of_js/BJSP/5.Basics_of_dom_dom_manipulation_and_debugging.md
+++ b/foundations_of_js/BJSP/5.Basics_of_dom_dom_manipulation_and_debugging.md
@@ -33,6 +33,16 @@ Searching for (and fixing) errors in programming code is called code debugging.
 	- [Debugging techniques with Javascript](https://www.youtube.com/watch?v=3EXNtmgf87s)
 - Please code along with the instructor rather than just watching the video
 
+### Additional References
+- [MDN: Document Object Model](https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction)
+- [DOM Manipulation Methods](https://www.hongkiat.com/blog/dom-manipulation-javascript-methods/)
+- [Freecodecamp: DOM manipulation in Vanilla JS](https://www.freecodecamp.org/news/dom-manipulation-in-vanilla-js-2036a568dcd9/)
+- [MDN: Manipulating documents](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Manipulating_documents)
+- [Debugging techniques with Javascript](https://www.youtube.com/watch?v=3EXNtmgf87s)
+- [Googler Devs: Chrome devtools](https://developers.google.com/web/tools/chrome-devtools/javascript/)
+- [JS debugging tips](https://raygun.com/javascript-debugging-tips)
+- [JS Info: Debugging Chrome](https://javascript.info/debugging-chrome)
+
 ### Assessment Quiz
 
 1. Which of the following is an inline element:
