--- a/foundations_of_js/ADE/5.Assignment_quiz_creator.md
+++ b/foundations_of_js/ADE/5.Assignment_quiz_creator.md
@@ -1,36 +1,22 @@
 ## Assignment: Quiz
 ### Problem Statement
-In your code, Create an array of Objects with 3 properties i.e question, answer, options e.g
-> [
-> &nbsp;&nbsp;{
-> &nbsp;&nbsp;&nbsp;&nbsp;question: 'What is the capital of India?',
-> &nbsp;&nbsp;&nbsp;&nbsp;answer: 'Delhi',
-> &nbsp;&nbsp;&nbsp;&nbsp;options: [ 'Mumbai', 'Delhi', 'Gujarat' ]
-> &nbsp;&nbsp;},
-> &nbsp;&nbsp;{
-> &nbsp;&nbsp;&nbsp;&nbsp;question: 'When did India win the first world cup?',
-> &nbsp;&nbsp;&nbsp;&nbsp;answer: '1983',
-> &nbsp;&nbsp;&nbsp;&nbsp;options: [ '1990', '1983', '2003' ]
-> &nbsp;&nbsp;},
-> ...so on
-> ]
+In your code, make an api call to https://opentdb.com/api.php?amount=10&category=11&difficulty=easy&type=multiple
 
-As shown in the example, create ten such objects with different questions, answers and options. Then design to create the site has been provided below.
+The API provides you with the dummy data of quiz questions and answers.
 
-![Quiz](quiz.png)
+Show a stylised list of 10 quiz questions. Style it as per your creativity. Make sure you add some elements of delight like hover effect, animation on selecting an answer, etc. to brush your knowledge on CSS animation.
 
-On answering the first question, the first question should slide out and the second question should slide in. The user should not be allowed to go to this next question until the first question is answered.
+Ask for the user name before you start the quiz.
 
-Once the user has answered all the question, show the list of questions with the answers provided by the user alongside the right answer. Sample can be seen in the image.
-
-You can see a Exit button in the image which will allow the user to quit the quiz whenever he or she prefers. Once the user quits, the quiz should restart.
+After user has answered all the questions, show him the same list with right and wrong answers. At the top, show a message saying, "<Username>, you have answered <x (number)> answers correctly." where `Username` is the name you saved in the beginning and x is the number of answers the user answered correctly.
 
 ### Input
-[1, 9, 2, 3, 3, 3, 3, 3, 4, 4, 5, 6, 7, 8, 5, 6, 6, 9, 10, 10]
+API call hat provides 10 quiz questions
 
 ### Output
-[[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]]
+List with the right and wrong answers (if any)
 
 ### Constraints
-- Not more than 20 questions.
-- User should be allowed to exit.
+- API call should be made using `fetch()` api
+- Use jQuery for DOM manipulation
+- Use lodash for array/object manipulations
