Added the subdivisions

--- a/foundations_of_js/BJSP/1.intro_to_js_variables_and_operators.md
+++ b/foundations_of_js/BJSP/1.intro_to_js_variables_and_operators.md
@@ -16,6 +16,7 @@ JavaScript, not to be confused with Java, was created in 10 days in May 1995 by 
 
 #### What you must do?
 
+*Onboarding*
 - Read [what are the benefits of learning JavaScript?](https://boostlog.io/@sonuton/what-are-the-benefits-of-learning-javascript-5a87b3669837780090b3e833)
 
 ### Variables in JS
@@ -24,16 +25,26 @@ A JavaScript application works with information. Variables are used to store thi
 
 #### What you must do?
 
-- Read how to [create variables](https://javascript.info/variables). Do solve the corresponding assignment.
-- Read about the [different types of variable](https://javascript.info/types). Dive a little deeper into [string type variables](https://javascript.info/string). Do solve the corresponding assignment.
-- Read how to [convert variables from one type to another](https://javascript.info/type-conversions). Do solve the corresponding assignment.
+*Onboarding*
+
+- Read how to [create variables](https://javascript.info/variables). 
+- Read about the [different types of variable](https://javascript.info/types). Dive a little deeper into [string type variables](https://javascript.info/string). 
+
+- Read how to [convert variables from one type to another](https://javascript.info/type-conversions). 
+
 - Read about [variable scope](http://javascriptissexy.com/javascript-variable-scope-and-hoisting-explained/).
+
+*Code Exercises*
+
+- If you haven't, solve the corresponding assignment in the links
 
 ### Operators in JS
 
 Information stored in variables often involves operations. Operators are symbols or keywords that tell the JavaScript engine to perform some sort of actions on the variables.
 
 #### What you must do?
+
+*Onboarding*
 
 - Read about all the [different operators](https://www.tutorialrepublic.com/javascript-tutorial/javascript-operators.php)
 
