--- a/foundations_of_js/BJSP/2.control_flow_and_error_handling.md
+++ b/foundations_of_js/BJSP/2.control_flow_and_error_handling.md
@@ -24,10 +24,16 @@ Typical flows are:
 
 #### What you must do?
 
+*Onboarding*
+
 - Read about [if..else condition](https://javascript.info/ifelse).
 - Read about the [switch statement](https://javascript.info/switch).
+
 - Try to understand [loops](https://medium.com/@js_tut/the-complete-guide-to-loops-cfa6522157e9) in detail. The link is a complete guide to the looping mechanisms available in JavaScript.
-- Do solve the corresponding assignments in the link.
+
+*Code Exercises*
+
+- If you haven't, solve the corresponding assignment in the links
 
 ### Error handling in JS
 
@@ -38,6 +44,8 @@ Usually, a script “dies” (immediately stops) in case of an error, printing i
 But there’s a syntax construct  `try..catch`  that allows to “catch” errors and, instead of dying, do something more reasonable.
 
 #### What you must do?
+
+*Onboarding*
 
 - Read about [how you can handle error in your JS program](https://www.tutorialsteacher.com/javascript/javascript-error-handling)
 
