--- a/foundations_of_js/BJSP/3.Functions_and_oop.md
+++ b/foundations_of_js/BJSP/3.Functions_and_oop.md
@@ -18,16 +18,24 @@ A **function** is a block of code that performs an action or returns a value. Fu
 
 #### What you must do?
 
+*Onboarding*
+
 - Read about the [basics of JS Functions](https://javascript.info/function-basics)
+
 - Read and understand [JS closures](https://javascriptissexy.com/understand-javascript-closures-with-ease/)
 - Read about [callback](https://codeburst.io/javascript-what-the-heck-is-a-callback-aba4da2deced)
-- Do solve the corresponding assignments in the link.
+
+*Code Exercises*
+
+- If you haven't, solve the corresponding assignment in the links
 
 ### Object-oriented programming
 
 Object Oriented Programming (OOP) refers to using self-contained pieces of code to develop applications. We call these self-contained pieces of code **objects**, better known as _Classes_ in most OOP programming languages and _Functions_ in JavaScript. We use objects as building blocks for our applications. Building applications with objects allows us to adopt some valuable techniques, namely, **Inheritance** (objects can inherit features from other objects), **Polymorphism** (objects can share the same interface—how they are accessed and used—while their underlying implementation of the interface may differ), and **Encapsulation** (each object is responsible for specific tasks).
 
 #### What you must do?
+
+*Onboarding*
 
 - Watch the [tutorial video](http://www.objectplayground.com/) to get a better insight of OOP
 
