--- a/foundations_of_js/BJSP/5.Basics_of_dom_dom_manipulation_and_debugging.md
+++ b/foundations_of_js/BJSP/5.Basics_of_dom_dom_manipulation_and_debugging.md
@@ -14,12 +14,17 @@ This concept will help you understand the basics of DOM and how to manipulate DO
 
 #### What you must do?
 
+*Onboarding*
+
 - Go through this 4 part video series to understand DOM in depth. DOM manipulation is an important aspect that JS developers need to understand for playing with the DOM efficiently.
 	- [JavaScript DOM Crash Course - Part 1](https://www.youtube.com/watch?v=0ik6X4DJKCc)
 	- [JavaScript DOM Crash Course - Part 2](https://www.youtube.com/watch?v=mPd2aJXCZ2g)
 	- [JavaScript DOM Crash Course - Part 3](https://www.youtube.com/watch?v=wK2cBMcDTss)
 	- [JavaScript DOM Crash Course - Part 4](https://www.youtube.com/watch?v=i37KVt_IcXw)
-- Please code along with the instructor rather than just watching the video
+
+*Code Exercises*
+
+- If you haven't, code along with the instructor while watching the video tutorial
 
 ### Debugging
 
@@ -29,9 +34,14 @@ Searching for (and fixing) errors in programming code is called code debugging.
 
 #### What you must do?
 
+*Onboarding*
+
 - Please watch the video to understand Debugging. This is a crucial concept too as you'll be spending a lot of time debugging while you code
 	- [Debugging techniques with Javascript](https://www.youtube.com/watch?v=3EXNtmgf87s)
-- Please code along with the instructor rather than just watching the video
+
+*Code Exercises*
+
+- If you haven't, code along with the instructor while watching the video
 
 ### Additional References
 - [MDN: Document Object Model](https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction)
