--- a/foundations_of_js/BJSP/6.form_validation.md
+++ b/foundations_of_js/BJSP/6.form_validation.md
@@ -21,9 +21,14 @@ JavaScript provides a way to validate form's data on the client's computer befor
 
 #### What you must do?
 
+*Onboarding*
+
 - Below given video is a good start to understand how forms are validated.
 	- [Form Validation](https://www.youtube.com/watch?v=HP-VzJEDCKE)
-- Please code along with the instructor rather than just watching the video
+
+*Code Exercises*
+
+- If you haven't, code along with the instructor while watching the video tutorial
 
 ### Assessment Quiz
 
