--- a/foundations_of_js/BJSP/4.Data_structures.md
+++ b/foundations_of_js/BJSP/4.Data_structures.md
@@ -15,12 +15,18 @@ A **data structure** is a data organization, management, and storage format that
 
 #### What you must do?
 
+*Onboarding*
+
 - Read about various [Array Methods](https://javascript.info/array-methods) used for manipulating and accessing data.
 - Read about all you need to know about JS Data structures in parts
 	- [Data structures in JS](https://medium.com/siliconwat/data-structures-in-javascript-1b9aed0ea17c)
 	- [Data structures in JS Part 1](https://blog.bitsrc.io/data-structures-in-javascript-part-1-8231c9a4bc8b)
 	- [Data structures in JS Part 2](https://blog.bitsrc.io/data-structures-in-javascript-part-2-d0d09b761df0)
-- Do solve the corresponding assignments in the link.
+
+*Code Exercises*
+
+- If you haven't, solve the corresponding assignment in the links
+
 
 
 ### Assessment Quiz
